Improve code readability (#40)
* add code improvements

* Update DockerProperties.java

* optimise imports

* Update PortholeApplication.java

* remove imports

* format code

* improve code readability

* remove dead code

* fix bug

* undo bug

* remove unnecessary comments